# grpose

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  run_format.sh
.github/workflows/: test.yml
analysis/: minimal_solvers_analysis.ipynb  minimal_solvers_analysis_ate.ipynb  minimal_solvers_analysis_rte.ipynb
analysis/profiles/motion/: 17pt.dot  6pt.dot  6pt_opengv_raw.dot  6pt_poselib.dot  8pt.dot  8pt_colmap.dot  c_plus_s.dot
analysis/profiles/stability/: 17pt.dot  6pt.dot  6pt_opengv_raw.dot  6pt_poselib.dot  8pt.dot  8pt_colmap.dot  c_plus_s.dot
cmake/modules/: FindGlog.cmake
demo/: CMakeLists.txt
demo/benchmark/: CMakeLists.txt
demo/benchmark/central_ransac_benchmark/: CMakeLists.txt  main.cpp
demo/benchmark/central_refinement_benchmark/: CMakeLists.txt  main.cpp
demo/benchmark/minimal_solver_stability/: CMakeLists.txt  main.cpp
demo/benchmark/numeric_stability/: CMakeLists.txt  main.cpp
demo/benchmark/sampson_error_comparison/: CMakeLists.txt  main.cpp
demo/benchmark/synthetic_ransac_benchmark/: CMakeLists.txt  main.cpp
demo/colmap/: CMakeLists.txt
demo/colmap/draw_extracted_matches/: CMakeLists.txt  main.cpp
demo/dataset/: CMakeLists.txt
demo/demo_sophus/: CMakeLists.txt  main.cpp
demo/initialization/: init_multicol_mcam.sh  init_multicol_robotcar.sh  initialization.py
demo/metrics/: CMakeLists.txt  main.cpp
demo/opengv_initialization/: CMakeLists.txt  OpenGVInitialization.cpp  OpenGVMultiCamInitialization.cpp  OpenGVRobotcarInitialization.cpp  README.md
demo/opengv_initialization/gv_experiments/: SyntheticData.cpp  SyntheticDataDegenCase.cpp
ext/colmap_extracts/: CMakeLists.txt
include/: CameraBundle.h  CameraModel.h  INCLUDE_STD_FILESYSTEM_EXPERIMENTAL.h  defs.h  metrics.h  trajectory.h  types.h  util.h
include/camera/: Camera.h  CameraBundle.h  CameraModelPinhole.h  CameraModelScaramuzza.h  camera.h  camera_bundle.h  camera_model.h  camera_model_generic.h  camera_model_pinhole.h  camera_model_scaramuzza.h  camera_model_unified.h  colmap_camera_models.h
include/central/: approximate_central_solution_sampler.h  central_bearing_vector_correspondences.h  central_bundle_adjuster.h  central_opengv_adapter.h  central_opengv_minimal_solver.h  central_opengv_solver_bvc.h  central_point2d_correspondences.h  central_refiner.h  central_solver_bvc.h  central_solver_from_points2d.h  central_solver_using_features.h
include/dataset/: DatasetReader.h  MultiCamReader.h  RobotcarReader.h  autovision_reader.h  dataset_reader.h  multicam_reader.h  robotcar_reader.h
include/features/: colmap_database.h  feature_detector_and_matcher.h
include/grpose/: bearing_vector_correspondences.h  colmap_solver_8pt.h  minimal_solver.h  minimal_solver_central_plus_scale.h  non_central_relative_pose_minimal_solver.h  non_central_relative_pose_solver.h  opengv_adapter.h  opengv_minimal_solver.h  opengv_solver.h  opengv_solver_bvc.h  point2d_correspondences.h  poselib_solver_6pt.h  solver_6pt_poselib.h  solver_bvc.h  solver_central_plus_scale.h
include/init/: MultiColInitializer.h
include/init_opengv/: FeatureDetectorMatcher.h  MultiCamInitSettings.h  NonCentralRelativePoseSolver.h  PoseFileWriter.h  WriteToFile.h  feature_detector_matcher.h  multicam_init_settings.h  non_central_relative_pose_solver.h  non_central_relative_pose_solver_old.h  write_poses_to_file.h
include/openGVInitialization/: FeatureDetectorMatcher.h  MultiCamInitSettings.h  NonCentralRelativePoseSolver.h  PoseFileWriter.h
include/synthetic/: car_like_scene.h  random_scene.h  scene.h
include/util/: ceres_util.h  geometry.h  metrics.h  sampling.h  trajectory.h  type_traits.h  types.h  util.h
py/plotting/: plot_distr_features.py  plot_distr_refinement_err.py  plot_motion_errors.py  plot_ransac_err.py  plot_ransac_num_iter.py  plot_sampson_vs_residual.py  plot_stability.py  plot_times.py
py/util/: generate_colmap_masks_autovision.py
src/: CameraBundle.cpp  CameraModel.cpp  metrics.cpp  trajectory.cpp  util.cpp
src/camera/: Camera.cpp  CameraBundle.cpp  CameraModelScaramuzza.cpp  camera.cpp  camera_bundle.cpp  camera_model_generic.cpp  camera_model_pinhole.cpp  camera_model_scaramuzza.cpp  colmap_camera_models.cpp
src/central/: approximate_central_solution_sampler.cpp  central_bearing_vector_correspondences.cpp  central_bundle_adjuster.cpp  central_opengv_adapter.cpp  central_opengv_minimal_solver.cpp  central_opengv_solver_bvc.cpp  central_point2d_correspondences.cpp  central_refiner.cpp  central_solver_bvc.cpp  central_solver_from_points2d.cpp  central_solver_using_features.cpp
src/dataset/: DatasetReader.cpp  MultiCamReader.cpp  RobotcarReader.cpp  autovision_reader.cpp  dataset_reader.cpp  multicam_reader.cpp  robotcar_reader.cpp
src/features/: colmap_database.cpp  feature_detector_and_matcher.cpp
src/grpose/: bearing_vector_correspondences.cpp  colmap_solver_8pt.cpp  minimal_solver.cpp  minimal_solver_central_plus_scale.cpp  non_central_relative_pose_minimal_solver.cpp  non_central_relative_pose_solver.cpp  opengv_adapter.cpp  opengv_minimal_solver.cpp  opengv_solver.cpp  opengv_solver_bvc.cpp  point2d_correspondences.cpp  poselib_solver_6pt.cpp  solver_6pt_poselib.cpp  solver_bvc.cpp  solver_central_plus_scale.cpp
src/init_opengv/: FeatureDetectorMatcher.cpp  MultiCamInitSettings.cpp  NonCentralRelativePoseSolver.cpp  PoseFileWriter.cpp  WriteToFile.cpp  feature_detector_matcher.cpp  multicam_init_settings.cpp  non_central_relative_pose_solver.cpp  non_central_relative_pose_solver_old.cpp  write_poses_to_file.cpp
src/openGVInitialization/: FeatureDetectorMatcher.cpp  MultiCamInitSettings.cpp  NonCentralRelativePoseSolver.cpp  PoseFileWriter.cpp
src/synthetic/: car_like_scene.cpp  random_scene.cpp  scene.cpp
src/util/: ceres_util.cpp  geometry.cpp  metrics.cpp  trajectory.cpp  util.cpp
test/: CMakeLists.txt  test-file_timestamped-poses.txt  test_camera_model.cpp  test_cameramodel.cpp  test_cameramodelscaramuzza.cpp  test_metrics.cpp  test_primer.cpp  test_synthetic_scene.cpp  test_trajectory.cpp  test_util.cpp
(+85 files in other folders)
